Solve list title overflow essue

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* aside */
 aside
 {
-    padding: 32px 28px;
+    padding: 32px 20px;
     background-color: var(--white);
     display: flex;
     flex-direction: column;
@@ -66,6 +66,11 @@ aside a
     font-size: 14px;
     font-weight: 600;
     transition: 0.3s;
+    display: block;
+    width: 100%;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 aside a:hover
@@ -179,6 +184,10 @@ main
     font-weight: bold;
     color: var(--black);
     cursor: pointer;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    width: 252px;
+    white-space: nowrap;
 }
 
 .info-header p
